Fix homepage nav on small displays

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -14,6 +14,7 @@
   margin: 0;
   border: 0;
   background: transparent;
+  z-index: 1000;
 }
 
 header {
